# TwitchLMChatBot.Models/Command.cs
@@ -16,5 +16,16 @@ namespace TwitchLMChatBot.Models
 
         public bool IsEnabled { get; set; }
 
+        public CommandPermissions Permissions { get; set; }
+    }
+
+
+    public class CommandPermissions
+    {
+        public bool Viewers { get; set; }
+        public bool Followers { get; set; }
+        public bool Subscribers { get; set; }
+        public bool Vips { get; set; }
+        public bool Moderators { get; set; }
     }
 }
